@@ -1,4 +1,5 @@
 5.0.3 -> 5.0.4:
+    - jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
     - jbj: add %_build_iconsize macro to permit configuration.
     - jbj: trash-and-restore macro config for multiple CLI arg builds.
     - jbj: rpmrepo: correct requiressqlentry tag name typo.
